[package]
name = "subsurface"
version = "0.1.0"
authors = ["Nitori- <nat1192@gmail.com>"]

[dependencies]
cgmath = "*"
dot_vox = "*"
bitflags = "*"
log = "*"
chrono = "*"
glutin = "*"
gfx = { git = "https://github.com/Nitori-/gfx", branch = "short-attribs" }
gfx_window_glutin = { git = "https://github.com/Nitori-/gfx", branch = "short-attribs" }
rustc-serialize = "*"
bincode = "*"
num-iter = "*"
clap = "*"
image = "*"
noise = "*"
num = "*"

[replace]
"gfx_device_gl:0.13.0" = { git = "https://github.com/Nitori-/gfx", branch = "short-attribs" }
